add @interview jvm basic params setting